--- a/src/pages/main.css
+++ b/src/pages/main.css
@@ -1,6 +1,5 @@
 .marquee {
     width: 100%;
-    overflow: hidden;
     white-space: nowrap;
     box-sizing: border-box;
     animation: marquee 10s linear infinite;
@@ -35,6 +34,9 @@ article{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+#topA{
     overflow: hidden;
 }
 
@@ -55,6 +57,63 @@ article{
     justify-content: center;
     align-items: center;
 }
+.ofCards{
+    display: flex;
+    gap: 1rem;
+    .top{
+        p{
+            color: black;
+            font-size: 1rem;
+        }
+        border-radius: 12px;
+        border: 1px solid black;
+        padding: 0 1rem ;
+    }
+
+    .l-oc{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+    }
+
+    .r-oc{
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+    }
+    .o-card{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: start;
+        padding: 2rem;
+        border-radius: 1rem;
+        background: #EFF0F5;
+    }
+    p{
+        color: black;
+        font-size: 25px;
+    }
+}
+.ava{
+    padding: 1rem;
+    font-size: 32px;
+    font-weight: normal;
+    color: white;
+    background-color: #923EB2;
+    cursor: pointer;
+    border: none;
+    border-radius: 20px;
+    transition: 0.3s ease;
+    box-shadow: 0 0 28px -11px #000;
+}
+.ava:hover{
+    transition: 0.3s ease;
+   transform: scale(1.1) translateY(-1rem);
+}
+
+
 @media screen and (max-width: 1200px) {
     .main-content{
         flex-direction: column;
