--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,3 +5,25 @@ header{
     align-items: center;
     display: flex;
 }
+
+@media screen and (max-width: 1024px) {
+    header{
+        .burger-menu{
+            display: flex;
+        }
+        .navbar{
+            display: none;
+        }
+    }
+}
+
+@media screen and (max-width: 670px) {
+    header{
+        .f-top{
+            align-items: start;
+            nav{
+                flex-direction: column;
+            }
+        }
+    }
+}
